[package]
name = "tcp-broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
rand = "0.8.5"
test-log = { version = "0.2.14", features = ["trace"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
