[package]
name = "udp-tcp-spmc-broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
once_cell = "1.19.0"
rand = "0.8.5"
test-log = { version = "0.2.15", features = ["trace"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
